@@ -462,6 +462,7 @@ All (GUI):
 - Show ribbon tools help strings in tooltips (John Roberts).
 - Improve row/column selection modes in wxGrid (joostn).
 - Allow using wxEVT_UPDATE_UI with wxRibbonButtonBar (Emilien Kia).
+- Add wxRibbonButtonBar::InsertXXXButton() methods (Emilien Kia).
 
 GTK:
 
